[package]
name = "solana-builtins-default-costs"
description = "Solana builtins default costs"
documentation = "https://docs.rs/solana-builtins-default-costs"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_builtins_default_costs"

[dev-dependencies]
static_assertions = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
]
dev-context-only-utils = []
