[package]
name = "solana-memory-usage"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.1"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-memory-usage"
readme = "../README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
