[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "Solana Program Test Framework"
edition = "2018"
license = "Apache-2.0"
name = "solana-program-test"
repository = "https://github.com/solana-labs/solana"
version = "1.4.10"

[dependencies]
async-trait = "0.1.36"
base64 = "0.12.3"
chrono = "0.4.19"
chrono-humanize = "0.1.1"
log = "0.4.8"
solana-banks-client = "1.4.9"
solana-banks-server = "1.4.9"
solana-bpf-loader-program = "1.4.9"
solana-logger = "1.4.9"
solana-program = "1.4.9"
solana-runtime = "1.4.9"
solana-sdk = "1.4.9"
tokio = { version = "0.3", features = ["full"] }

[workspace]
